--- a/JavaScript/L6E7/index.html
+++ b/JavaScript/L6E7/index.html
@@ -77,6 +77,10 @@
         .text-area {
             width: 300px;
             background-color: rgba(196, 192, 192, 0.842);
+            color: rgb(0, 0, 0);
+            font-size: 15px;
+            font-weight: bold;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
     </style>
 </head>
