--- a/JavaScript/L7E04/index.html
+++ b/JavaScript/L7E04/index.html
@@ -89,6 +89,14 @@
             width: 100px;
             height: 25px;
         }
+        .out-resultado{
+            font-size: 20pt;
+            margin-left: 500px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-weight: bold;
+            color: rgb(75, 77, 75);
+            background-color: rgb(83, 221, 255);
+        }
     </style>
 </head>
 
@@ -113,6 +121,7 @@
         </div>
         <div class="inp-pequisa">
             <input type="number" name="nmPesqTemp" id="idPesqTemp">
+            <output class="out-resultado">Aqui sera a saida</output>
         </div>
         <div class="btnPesquisa">
             <input type="button" id="idBtnPequisa" value="Gravar">
